--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.1",
     "axios": "^1.2.1",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
