Feat: api layout add

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL="http://localhost:8080"
+REACT_APP_BASE_URL="http://43.200.192.190/api"
 REACT_APP_GOOGLE_CLIENT_ID="648378971262-6vvq4ao4glm16ca6g5l8ltfslsf73p87.apps.googleusercontent.com"
